--- a/package.json
+++ b/package.json
@@ -27,9 +27,14 @@
     "mime"                      : "1.3.4",
     "mongoose"                  : "4.3.4",
     "morgan"                    : "1.0.1",
+    "nunjucks"                  : "latest",
     "node-sass"                 : "3.3.3",
     "node-notifier"             : "4.5.0",
     "node-minify"               : "1.3.7",
+    "passport"                  : "0.3.2",
+    "passport-local"            : "1.0.0",
+    "passport-facebook"         : "2.1.0",
+    "passport-google-oauth"     : "1.0.0",
     "recursive-readdir"         : "1.3.0",
     "request"                   : "2.67.0",
     "swig"                      : "1.4.2",
