--- a/file-structures/light/package.json
+++ b/file-structures/light/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "titansofmavericks",
+  "name": "node-light",
   "version": "1.0.0",
   "description": "",
   "main": "build/server.js",
