--- a/file-structures/full/package.json
+++ b/file-structures/full/package.json
@@ -29,6 +29,8 @@
     "mongoose": "^4.9.0",
     "morgan": "1.8.1",
     "nunjucks": "3.0.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "socket.io": "1.7.3",
     "webpack": "2.2.1",
     "winston": "^2.2.0",
