--- a/file-structures/full/package.json
+++ b/file-structures/full/package.json
@@ -15,6 +15,8 @@
     "config": "1.25.1",
     "config.json": "0.0.4",
     "connect": "3.6.0",
+    "connect-flash": "^0.1.1",
+    "connect-redis": "^3.2.0",
     "cookie-parser": "1.4.3",
     "express": "4.15.2",
     "express-session": "1.15.1",
@@ -22,7 +24,7 @@
     "http-auth": "3.1.3",
     "jdc-node-cliarg-reader": "1.1.1",
     "jquery": "^3.1.1",
-    "json-loader": "0.5.4",
+    "json-loader": "^0.5.4",
     "jsonfile": "2.4.0",
     "lodash": "4.17.4",
     "moment": "2.17.1",
@@ -32,6 +34,7 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "socket.io": "1.7.3",
+    "source-map-loader": "^0.2.0",
     "webpack": "2.2.1",
     "winston": "^2.2.0",
     "winston-logstash": "^0.2.11",
