--- a/file-structures/full/src/browser_app/package.json
+++ b/file-structures/full/src/browser_app/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "author": "",
   "dependencies": {
-
+    "bootstrap-sass": "^3.3.7"
   },
   "engines": {
     "node": ">=6.5.0"
