--- a/file-structures/full/src/browser_app/package.json
+++ b/file-structures/full/src/browser_app/package.json
@@ -5,8 +5,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "bootstrap-sass": "^3.3.7",
     "jquery": "^3.2.1",
-    "lodash": "4.17.4"
+    "lodash": "4.17.4",
+    "renderjson": "^1.3.0"
   },
   "engines": {
     "node": ">=6.5.0"
